Ajout des 3 exercices dans le dossier evaluation

--- a/Exercice1/src/main/resources/application.properties
+++ b/Exercice1/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-hibernate.hbm2ddl.auto=update
-hibernate.show_sql=true
-hibernate.format_sql=true
-hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
-hibernate.connection.url=jdbc:mysql://localhost:3306/stockdb?createDatabaseIfNotExist=true
-hibernate.connection.username=root
-hibernate.connection.password=
+# Configuration MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/base?createDatabaseIfNotExist=true&serverTimezone=UTC
+
+spring.datasource.username=root
+spring.datasource.password=
+
+# Configuration Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
