--- a/Exercice2/src/main/resources/application.properties
+++ b/Exercice2/src/main/resources/application.properties
@@ -1,27 +1,12 @@
-# ===============================
-#   Configuration MySQL (XAMPP)
-# ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/gestion_projet?useSSL=false&serverTimezone=UTC
+# Configuration MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/base2?createDatabaseIfNotExist=true&serverTimezone=UTC
+
 spring.datasource.username=root
 spring.datasource.password=
 
-# ===============================
-#   Hibernate / JPA Settings
-# ===============================
+# Configuration Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
-
-# ===============================
-#   Désactivation des logs pour affichage clair
-# ===============================
-logging.level.root=OFF
-logging.level.org.springframework=OFF
-logging.level.org.hibernate=OFF
-
-# ===============================
-#   Serveur web
-# ===============================
-server.port=8080
-spring.main.web-application-type=none
