--- a/Exercice3/src/main/resources/application.properties
+++ b/Exercice3/src/main/resources/application.properties
@@ -1,15 +1,12 @@
 # Configuration MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/etat_civil?createDatabaseIfNotExist=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/base3?createDatabaseIfNotExist=true&serverTimezone=UTC
+
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuration JPA/Hibernate
+# Configuration Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-# Logging
-logging.level.org.hibernate.SQL=OFF
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=OFF
+spring.jpa.properties.hibernate.format_sql=true
