--- a/Exercice2/src/main/resources/application.properties
+++ b/Exercice2/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Configuration MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/stockdb?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/gestion_projet?createDatabaseIfNotExist=true&serverTimezone=UTC
 
 spring.datasource.username=root
 spring.datasource.password=
