--- a/Exercice3/src/main/resources/application.properties
+++ b/Exercice3/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Configuration MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/base3?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/etat_civil?createDatabaseIfNotExist=true&serverTimezone=UTC
 
 spring.datasource.username=root
 spring.datasource.password=
